--- a/encrypt.html
+++ b/encrypt.html
@@ -1,3 +1,13 @@
+<!--
+Greetings! If you're reading this, Congratulations! you are one of the
+small percentage of humans that knows how to view source html.
+Hopefully, you are here to vet my encryption protocol!
+
+There are some comments included throughout to help but
+I suggest you read /protocol.html for a complete summary.
+
+-->
+
 <!doctype html>
 <html>
     <head>
