--- a/FAQ.html
+++ b/FAQ.html
@@ -33,41 +33,35 @@
             <div style="height: 200px"></div>
             <h1>Frequently Asked Questions</h1>
             <div class="container" style="margin-bottom: 0">
-                <ul style="margin-top: 100px">
-                    <p>If the Beneficiary Key is lost, what do I do?</p>
-                    <li>
+                <ol style="margin-top: 100px">
+                    <li>If the Beneficiary Key is lost, what do I do?</li>
+                    <p>
                         If either key is lost, the seed phrase CANNOT be
                         decrypted. This is the risk of self custody. Unless
                         there are other means of retrieval, the Bitcoin is gone.
                         Legacy does not save any data.
-                    </li>
-                    <p>Can I create multiple key-pairs?</p>
-                    <li>
+                    </p>
+                    <li>Can I create multiple key-pairs?</li>
+                    <p>
                         Yes. You can create as many key-pairs you like. They can
                         be associated with as many different seed phrases as you
                         like.
-                    </li>
-                    <p>How do I use the Legacy software offline?</p>
-                    <li>
-                        Download the encrypt.html, decrypt.html and english.txt
-                        files from the github repository. In a terminal window,
-                        navigate to the folder containing the files. Disconnect
-                        from Wifi, internet, etc. Run the command
-                        <code>python3 -m http.server</code>and then open a
-                        browser window and go to http://localhost:8000 The page
-                        will load without internet connection because it is
-                        hosted on a local server on your computer.
-                    </li>
-                    <p>How does the encryption protocol work?</p>
-                    <li>
+                    </p>
+                    <li>How do I use the Legacy software offline?</li>
+                    <p>
+                        Download the file. Disconnect you from wifi. Open the
+                        file in a web browser.
+                    </p>
+                    <li>How does the encryption protocol work?</li>
+                    <p>
                         Visit the
                         <a
                             href="https://ericscalibur.github.io/Legacy_Encryption/protocol.html"
                             >Protocol</a
                         >
                         page for detail summary.
-                    </li>
-                </ul>
+                    </p>
+                </ol>
             </div>
             <div class="content">
                 <div style="height: 30px"></div>
