--- a/encrypt.html
+++ b/encrypt.html
@@ -68,8 +68,10 @@
                         This online version is for demonstration purposes only.
                     </p>
                     <p>
-                        Please read the HOW-IT-WORKS page and the BENEFITS page
-                        before using it offline.
+                        Please read the
+                        <a href="how-it-works.html">HOW-IT-WORKS</a> page and
+                        the <a href="benefits.html">BENEFITS</a> page before
+                        using it offline.
                     </p>
                     <p>
                         For testing purposes, you can generate random seed
@@ -118,9 +120,7 @@
                         </button>
                     </div>
                     <br /><br />
-                    <label for="encryptedSeedPhrase"
-                        >Encrypted Seed Phrase:</label
-                    >
+                    <p for="encryptedSeedPhrase">Encrypted Seed Phrase:</p>
                     <p
                         id="encryptedSeedPhrase"
                         style="overflow-wrap: break-word"
