--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li><a href="mission.html">Mission</a></li>
                     <li><a href="how-it-works.html">How It Works</a></li>
                     <li><a href="benefits.html">Benefits</a></li>
+                    <li><a href="FAQ.html">FAQ</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
