--- a/FAQ.html
+++ b/FAQ.html
@@ -49,10 +49,21 @@
                     </p>
                     <li>How do I use the Legacy software offline?</li>
                     <p>
-                        Download the file. Disconnect you from wifi. Open the
-                        file in a web browser.
+                        Download the offline.html from
+                        <a
+                            href="https://github.com/ericscalibur/Legacy_Encryption"
+                            >gitbub</a
+                        >. Disconnect from wifi. Open the file in a web browser.
                     </p>
-                    <li>How does the encryption protocol work?</li>
+                    <li>
+                        Are there any restrictions on allowable characters for
+                        the keys?
+                    </li>
+                    <p>
+                        No. Beneficiary Key and Benefactor Key may contain all
+                        uppercase, lowercase, numbers, and special characters.
+                    </p>
+                    <li>How exactly does the encryption protocol work?</li>
                     <p>
                         Visit the
                         <a
