--- a/benefits.html
+++ b/benefits.html
@@ -31,12 +31,15 @@
             <h1 style="margin-bottom: 30px">Benefits</h1>
             <div class="container">
                 <ol>
-                    <li>Works without internet connection.</li>
+                    <li>Encrypt and decrypt without internet connection.</li>
                     <li>
                         Excludes lawyers, executors, and other trusted
                         third-parties.
                     </li>
-                    <li>Consistent with the Bitcoin ethos.</li>
+                    <li>Consistent with the Bitcoin P2P ethos.</li>
+                    <li>Choose your own encryption keys.</li>
+                    <li>Can be used completely anonymously.</li>
+                    <li>Create as many key-pairs as you like.</li>
                 </ol>
             </div>
             <div style="height: 50px"></div>
@@ -49,7 +52,7 @@
                         decrypt.
                     </li>
                     <li>
-                        If any of these pieces of information are lost, the
+                        If any one of these pieces of information are lost, the
                         Bitcoin is irretrievable.
                     </li>
                     <li>
@@ -61,8 +64,12 @@
                         the seed phrase.
                     </li>
                     <li>
-                        Use this tool in conjunction with a deadman switch to
-                        deliver the Benefactor Key.
+                        This tool is intended to be used in conjunction with a
+                        deadman switch to deliver the Benefactor Key.
+                    </li>
+                    <li>
+                        The biggest weakness of this encryption protocol is the
+                        guessability of your keys.
                     </li>
                 </ol>
             </div>
