--- a/how-it-works.html
+++ b/how-it-works.html
@@ -36,27 +36,28 @@
             <div class="container" style="margin-bottom: 0">
                 <ol style="margin-top: 100px">
                     <li>
-                        The Benefactor downloads the necessary files for
-                        Legacy's encryption system and uses it to generate a key
-                        pair and encrypt their seed phrase offline.
-                    </li>
-                    <li>One key is given to the Beneficiary to keep safe.</li>
-                    <li>
-                        The other key is kept by the Benefactor with the
-                        Encrypted Seed Phrase.
+                        The Benefactor downloads the html file from
+                        <a
+                            href="https://github.com/ericscalibur/Legacy_Encryption"
+                            >github</a
+                        >. Using Legacy's encryption protocol, generate a key
+                        pair and encrypt your seed phrase offline.
                     </li>
                     <li>
-                        The Benefactor sets up a Deadman Switch whereby, upon
-                        the death of the Benefactor, an email is sent to the
-                        Beneficiary.
+                        The Beneficiary Key is given to the Beneficiary to keep
+                        safe.
                     </li>
                     <li>
-                        The email contains the Benefactor's key and the
-                        Encrypted Seed Phrase.
+                        The Benefactor Key and the Encrypted Seed Phrase are
+                        packed into a Deadman Switch whereby, upon the death of
+                        the Benefactor, an email is sent to the Beneficiary
+                        containing the Benefactor key and the Encrypted Seed
+                        Phrase.
                     </li>
                     <li>
-                        Finally, the Beneficiary uses both keys to decrypt the
-                        seed phrase and recover the Bitcoin.
+                        Finally, the Beneficiary enters both keys into the
+                        Legacy decrypt data fields and the seed phrase will be
+                        decrypted and ready to recover the Bitcoin.
                     </li>
                 </ol>
             </div>
