--- a/FAQ.html
+++ b/FAQ.html
@@ -49,7 +49,7 @@
                     </p>
                     <li>How do I use the Legacy software offline?</li>
                     <p>
-                        Download the offline.html from
+                        Download "Legacy-offline.html" from
                         <a
                             href="https://github.com/ericscalibur/Legacy_Encryption"
                             >gitbub</a
@@ -63,6 +63,16 @@
                         No. Beneficiary Key and Benefactor Key may contain all
                         uppercase, lowercase, numbers, and special characters.
                     </p>
+                    <li>
+                        What information needs to be included in the Deadman
+                        Switch Email?
+                    </li>
+                    <p>The Beneficiary needs to receive:</p>
+                    <ul>
+                        <li>Benefactor Key</li>
+                        <li>Encrypted Seed Phrase</li>
+                        <li>Working copy of Legacy-offline.html</li>
+                    </ul>
                     <li>How exactly does the encryption protocol work?</li>
                     <p>
                         Visit the
