--- a/benefits.html
+++ b/benefits.html
@@ -40,6 +40,7 @@
                     <li>Choose your own encryption keys.</li>
                     <li>Can be used completely anonymously.</li>
                     <li>Create as many key-pairs as you like.</li>
+                    <li>Opensource. Transparent.</li>
                 </ol>
             </div>
             <div style="height: 50px"></div>
