--- a/how-it-works.html
+++ b/how-it-works.html
@@ -40,19 +40,21 @@
                         <a
                             href="https://github.com/ericscalibur/Legacy_Encryption"
                             >github</a
-                        >. Using Legacy's encryption protocol, generate a key
-                        pair and encrypt your seed phrase offline.
+                        >. Use Legacy's offline encryption protocol to create a
+                        key pair and encrypt your seed phrase.
                     </li>
                     <li>
-                        The Beneficiary Key is given to the Beneficiary to keep
-                        safe.
+                        The Benefactor gives the Beneficiary Key to the
+                        Beneficiary to keep safe.
                     </li>
                     <li>
                         The Benefactor Key and the Encrypted Seed Phrase are
                         packed into a Deadman Switch whereby, upon the death of
                         the Benefactor, an email is sent to the Beneficiary
                         containing the Benefactor key and the Encrypted Seed
-                        Phrase.
+                        Phrase. At this time, we do not offer this service and
+                        we recommend Gmail until something better becomes
+                        available.
                     </li>
                     <li>
                         Finally, the Beneficiary enters both keys into the
