--- a/encrypt.html
+++ b/encrypt.html
@@ -71,7 +71,7 @@
                         Please read the
                         <a href="how-it-works.html">HOW-IT-WORKS</a> page and
                         the <a href="benefits.html">BENEFITS</a> page before
-                        using it offline.
+                        using Legacy offline.
                     </p>
                     <p>
                         For testing purposes, you can generate random seed
