--- a/Legacy-offline.html
+++ b/Legacy-offline.html
@@ -28,11 +28,12 @@
                     <p>THIS VERSION IS INTEDED FOR OFFLINE USE</p>
 
                     <p>Please read the HOW-IT-WORKS, BENEFITS and FAQ page.</p>
-
+                    <p>For further consultation, Contact me.</p>
                     <p>
                         Check the expected functionality of your keys using the
                         DECRYPT function below.
                     </p>
+
                     <div style="height: 10vh"></div>
                     <label for="benefactor-Key">Benefactor Key:</label><br />
                     <input type="text" id="benefactor-Key" /><br /><br />
