--- a/benefits.html
+++ b/benefits.html
@@ -61,15 +61,16 @@
                         and encrypted seed phrase.
                     </li>
                     <li>
-                        A working copy of Legacy is also necessary to decrypt
-                        the seed phrase.
+                        Keeping a working copy of "Legacy-offline" is also
+                        recommended to decrypt the seed phrase.
                     </li>
                     <li>
                         This tool is intended to be used in conjunction with a
-                        deadman switch to deliver the Benefactor Key.
+                        Deadman Switch to deliver the Benefactor Key and
+                        Encrypted Seed Phrase.
                     </li>
                     <li>
-                        The biggest weakness of this encryption protocol is the
+                        The only weakness of this encryption protocol is the
                         guessability of your keys.
                     </li>
                 </ol>
