--- a/how-it-works.html
+++ b/how-it-works.html
@@ -52,9 +52,7 @@
                         packed into a Deadman Switch whereby, upon the death of
                         the Benefactor, an email is sent to the Beneficiary
                         containing the Benefactor key and the Encrypted Seed
-                        Phrase. At this time, we do not offer this service and
-                        we recommend Gmail until something better becomes
-                        available.
+                        Phrase.
                     </li>
                     <li>
                         Finally, the Beneficiary enters both keys into the
