--- a/FAQ.html
+++ b/FAQ.html
@@ -69,9 +69,9 @@
                     </li>
                     <p>The Beneficiary needs to receive:</p>
                     <ul>
-                        <li>Benefactor Key</li>
-                        <li>Encrypted Seed Phrase</li>
-                        <li>Working copy of Legacy-offline.html</li>
+                        <li><p>Benefactor Key</p></li>
+                        <li><p>Encrypted Seed Phrase</p></li>
+                        <li><p>Working copy of "Legacy-offline.html"</p></li>
                     </ul>
                     <li>How exactly does the encryption protocol work?</li>
                     <p>
