--- a/FAQ.html
+++ b/FAQ.html
@@ -68,11 +68,10 @@
                         Switch Email?
                     </li>
                     <p>The Beneficiary needs to receive:</p>
-                    <ul>
-                        <li><p>Benefactor Key</p></li>
-                        <li><p>Encrypted Seed Phrase</p></li>
-                        <li><p>Working copy of "Legacy-offline.html"</p></li>
-                    </ul>
+                    <p>1. Benefactor Key</p>
+                    <p>2. Encrypted Seed Phrase</p>
+                    <p>3. Working copy of "Legacy-offline.html"</p>
+
                     <li>How exactly does the encryption protocol work?</li>
                     <p>
                         Visit the
