favicon and css

--- a/Legacy-offline.html
+++ b/Legacy-offline.html
@@ -11,6 +11,7 @@
     -->
     <head>
         <title>Legacy Encryption</title>
+        <link rel="icon" type="image/png" href="favicon.png" />
         <style>
             input {
                 width: 80%;
@@ -20,18 +21,23 @@
 
     <body>
         <header>
-            <h1>Legacy Encryption</h1>
-
             <div class="content">
                 <div style="margin: auto; width: 80%">
+                    <h1>Legacy Encryption</h1>
+                    <div style="height: 5vh"></div>
                     <p>THIS VERSION IS INTEDED FOR OFFLINE USE</p>
 
                     <p>Please read the HOW-IT-WORKS, BENEFITS and FAQ page.</p>
-                    <p>For further consultation, Contact me.</p>
+                    <p>
+                        For further consultation, email
+                        ericscalibur@protonmail.com
+                    </p>
                     <p>
                         Check the expected functionality of your keys using the
                         DECRYPT function below.
                     </p>
+                    <p>WE DO NOT STORE ANY DATA.</p>
+                    <p>Securing your keys is your responsibility.</p>
 
                     <div style="height: 10vh"></div>
                     <label for="benefactor-Key">Benefactor Key:</label><br />
