--- a/encrypt.html
+++ b/encrypt.html
@@ -12,6 +12,7 @@
 
     <head>
         <title>Legacy Encryption</title>
+        <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="stylesheet" href="styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <style>
