--- a/how-it-works.html
+++ b/how-it-works.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Legacy - Encryption and Consulting</title>
+        <title>Legacy - How It Works</title>
+        <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="stylesheet" href="styles.css" />
         <style>
             header {
